# design-patterns

./: .gitignore  CMakeLists.txt  README.md
src/abstract_factory_pattern/: README.md  abstract_factory_pattern_test.cpp
src/abstract_factory_pattern/include/factory/: chicago_pizza_ingredient_factory.h  new_york_pizza_ingredient_factory.h  pizza_ingredient_factory.h
src/abstract_factory_pattern/include/pizza/: cheese_pizza.h  clam_pizza.h  pepperoni_pizza.h  pizza.h  veggie_pizza.h
src/abstract_factory_pattern/include/pizza_store/: chicago_style_pizza_store.h  new_york_style_pizza_store.h
src/adapter_pattern/: README.md  adapter_pattern_test.cpp
src/adapter_pattern/include/adapter/: turkey_adpater.h
src/adapter_pattern/include/duck/: duck.h
src/adapter_pattern/include/turkey/: turkey.h  wild_trukey.h
src/command_pattern/: README.md  command_pattern_test.cpp
src/command_pattern/include/command/: command.h  light_off_command.h  light_on_command.h  macro_command.h  no_command.h  tv_off_command.h  tv_on_command.h
src/command_pattern/include/control/: remote_control.h
src/command_pattern/include/device/: light.h  tv.h
src/composite_pattern/: README.md  composite_pattern_test.cpp
src/compound_pattern/: READMD.md  compound_pattern_test.cpp
src/decorator_pattern/: README.md  decorator_pattern_test.cpp
src/facade_pattern/: README.md  facade_pattern_test.cpp
src/facade_pattern/include/: amplifier.h  home_theater_facade.h  popcorn_popper.h  projector.h  screen.h  streaming_player.h  theater_lights.h  tuner.h
src/factory_method_patern/: README.md  factory_method_pattern_test.cpp
src/intro/: README.md  duck_test.cpp
src/iterator_pattern/: README.md  iterator_pattern_test.cpp
src/multi_pattern/: READMD.md  compound_pattern_test.cpp  multi_pattern_test.cpp
src/multi_pattern/include/: quackable.h
src/observer_pattern/: README.md  observer_pattern_test.cpp
src/proxy_pattern/: README.md
src/simple_factory/: README.md  simple_factory_test.cpp
src/singleton/: README.md
src/singleton_pattern/: README.md
src/state_pattern/: README.md  gumball_machine.cpp  state_pattern_test.cpp
src/state_pattern/include/: gumball_machine.h
src/strategy_pattern/: README.md
src/template_method_pattern/: README.md  template_method_pattern_test.cpp
src/template_method_pattern/include/: caffee.h  caffeine_beverage.h  tea.h
(+108 files in other folders)
